Non-unified build fixes, early June 2022 edition https://bugs.webkit.org/show_bug.cgi?id=241170

Unreviewed non-unified build fix.

* Source/WebCore/platform/audio/MultiChannelResampler.cpp: Add missing
  wtf/PrintStream.h inclusion.
* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp: Add
  missing inclusion of the <functional> stdlib header.

Canonical link: https://commits.webkit.org/251179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295084 268f45cc-cd09-0410-ab3c-d52691b4dbfc